--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -1,33 +1,30 @@
+
 ---
 ---
 <div class="row">
   {% if site.enable_publication_thumbnails %}
     <div class="col col-sm-2 abbr">
       {%- if entry.abbr -%}
-        {%- assign abbrs = entry.abbr | split: "," -%} {# Split the abbr field into a list #}
-        {%- for abbr in abbrs -%} {# Loop through each abbreviation #}
-          {%- assign abbr = abbr | strip -%} {# Remove any extra spaces #}
-          {%- if site.data.venues[abbr] -%}
-            {% assign venue_style = null %}
-            {% if site.data.venues[abbr].color != blank %}
-              {% assign venue_style = site.data.venues[abbr].color | prepend: 'style="background-color:' | append: '"' %}
-            {%- endif -%}
-            <abbr
-              class="badge rounded w-100"
-              {% if venue_style %}
-                {{ venue_style }}
-              {% endif %}
-            >
-              {% if site.data.venues[abbr].url %}
-                <a href="{{ site.data.venues[abbr].url }}">{{ abbr }}</a>
-              {% else %}
-                <div>{{- abbr -}}</div>
-              {% endif %}
-            </abbr>
-          {% else %}
-            <abbr class="badge rounded w-100">{{ abbr }}</abbr>
-          {% endif %}
-        {%- endfor -%} {# End loop #}
+        {%- if site.data.venues[entry.abbr] -%}
+          {% assign venue_style = null %}
+          {% if site.data.venues[entry.abbr].color != blank %}
+            {% assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' %}
+          {%- endif -%}
+          <abbr
+            class="badge rounded w-100"
+            {% if venue_style %}
+              {{ venue_style }}
+            {% endif -%}
+          >
+            {% if site.data.venues[entry.abbr].url %}
+              <a href="{{ site.data.venues[entry.abbr].url }}">{{ entry.abbr }}</a>
+            {% else %}
+              <div>{{- entry.abbr -}}</div>
+            {% endif %}
+          </abbr>
+        {% else %}
+          <abbr class="badge rounded w-100">{{ entry.abbr }}</abbr>
+        {% endif %}
       {% endif %}
       {% if entry.preview %}
         {% if entry.preview contains '://' %}
