--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -93,7 +93,7 @@
 
       <div class="periodical">
       {% if entry.type == "article" %}
-        <em>{{entry.journaltitle}}</em>
+        <em>{{entry.journal}}</em>
       {% elsif entry.type == "inproceedings" and entry.conference %}
         <em>Presented in {{entry.eventtitle}}</em>
       {% elsif entry.type == "incollection" %}
